STS 工具自動升級